[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/modules/core/ModuleWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/Window/module-software-integrity/windowbuttonmashfail.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/Window/module-software-integrity/windowbuttonmashsuccess.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/16/GOTHIC16.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/16/GOTHICB16.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/16/GOTHICI16.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/fonts/16/GOTHICBI16.tres" type="DynamicFont" id=7]
[ext_resource path="res://src/scripts/modules/ModuleSoftwareIntegrity.gd" type="Script" id=8]


[node name="ButtonMashGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" parent="." instance=ExtResource( 1 )]

[node name="TextAreaBorder" type="ReferenceRect" parent="Window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.5
margin_top = -200.0
margin_right = 237.5
margin_bottom = 200.0
rect_pivot_offset = Vector2( 237, 200 )
border_color = Color( 0, 0, 0, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextArea" type="RichTextLabel" parent="Window/TextAreaBorder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.5
margin_top = -194.0
margin_right = 231.5
margin_bottom = 194.0
rect_pivot_offset = Vector2( 230, 194 )
custom_fonts/bold_italics_font = ExtResource( 7 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.5
margin_top = 205.5
margin_right = 181.5
margin_bottom = 276.5
rect_pivot_offset = Vector2( 181, 35 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Window/TextureButton" to="." method="_on_TextureButton_pressed"]
